5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1734_2498.log
== TEST (2019-05-09 18:50:46) 
-- CODE:
A=int(input("a"))
B=int(input("b"))
pa=float(input("pa"))
pb=float(input("pb"))

ta=0
tb=0
ano=0


-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:57:01) 
-- CODE:
A=int(input("a"))
B=int(input("b"))
pa=float(input("pa"))
pb=float(input("pb"))

ta=0
tb=0
ano=0

while(A<B):
	ta=ta+pa/100
	tb=tb+pb/100
	ano=ano+1
print(ano)	
	

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:57:42) 
-- CODE:
A=int(input("a"))
B=int(input("b"))
pa=float(input("pa"))
pb=float(input("pb"))

ta=0
tb=0
ano=0

while(A<B):
	ta=ta+pa/100
	tb=tb+pb/100
	ano=ano+1
   print(ano)	
	

-- ERROR:
File "XXXX", line 14
    print(ano)	
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:57:48) 
-- CODE:
A=int(input("a"))
B=int(input("b"))
pa=float(input("pa"))
pb=float(input("pb"))

ta=0
tb=0
ano=0

while(A<B):
	ta=ta+pa/100
	tb=tb+pb/100
	ano=ano+1
   print(ano)	
	

-- EXECUTION TIME:
1.41574
-- ERROR:
  File "/home/codebench/codes/1734/2498/main.py", line 14
    print(ano)	
              ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 18:57:49) 
-- CODE:
A=int(input("a"))
B=int(input("b"))
pa=float(input("pa"))
pb=float(input("pb"))

ta=0
tb=0
ano=0

while(A<B):
	ta=ta+pa/100
	tb=tb+pb/100
	ano=ano+1
   print(ano)	
	

-- EXECUTION TIME:
1.06907
-- ERROR:
  File "/home/codebench/codes/1734/2498/main.py", line 14
    print(ano)	
              ^
IndentationError: unindent does not match any outer indentation level

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:57:51) 
-- CODE:
A=int(input("a"))
B=int(input("b"))
pa=float(input("pa"))
pb=float(input("pb"))

ta=0
tb=0
ano=0

while(A<B):
	ta=ta+pa/100
	tb=tb+pb/100
	ano=ano+1
   print(ano)	
	

-- ERROR:
File "XXXX", line 14
    print(ano)	
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 18:58:34) 
-- CODE:
A=int(input("a"))
B=int(input("b"))
pa=float(input("pa"))
pb=float(input("pb"))

ta=0
tb=0
ano=0

while(A<B):
	ta=ta+pa/100
	tb=tb+pb/100
	ano=ano+1
	
print(ano)
   	
	

-- ERROR:
File "XXXX", line 14
    print(ano)	
              ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:06:58) 
-- CODE:
A=int(input("a"))
B=int(input("b"))
pa=float(input("pa"))
pb=float(input("pb"))

ta=A
tb=B
ano=0

while(ta<tb):
	ta=ta*(pa/100)
	tb=tb*(pb/100)
	ano=ano+1
	
print(ano)
   	
	

-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 19:09:41) 
-- CODE:
A=int(input("a"))
B=int(input("b"))
pa=float(input("pa"))
pb=float(input("pb"))

ta=A
tb=B
ano=0

while(ta<tb):
	ta=ta+ta*(pa/100)
	tb=tb+tb*(pb/100)
	ano=ano+1
	
print(ano)
   	
	

-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:10:11) 
-- CODE:
A=int(input("a"))
B=int(input("b"))
pa=float(input("pa"))
pb=float(input("pb"))

ta=A
tb=B
ano=0

while(ta<tb):
	ta=ta+ta*(pa/100)
	tb=tb+tb*(pb/100)
	ano=ano+1
	
print(ano)
   	
	

-- EXECUTION TIME:
1.74999
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 19:22:02) 
-- CODE:
A=int(input("a"))
B=int(input("b"))
pa=float(input("pa"))
pb=float(input("pb"))

ta=0
tb=0
ano=0

while(A<B):
	ta=ta+pa/100
	tb=tb+pb/100
	ano=ano+1
	
print(ano)
   	
	

-- EXECUTION TIME:
1381.44
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-10 16:06:13) 
-- CODE:
A=int(input("a"))
B=int(input("b"))
pa=float(input("pa"))
pb=float(input("pb"))

ta=A
tb=B
ano=0

while(ta<tb):
	ta=ta+ta*(pa/100)
	tb=tb+tb*(pb/100)
	ano=ano+1
	
print(ano)
   	
	

-- EXECUTION TIME:
0.212111
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
